--- a/src/main/resources/Strings.properties
+++ b/src/main/resources/Strings.properties
@@ -1,4 +1,8 @@
+backButton=Back
+encryptButton=Encrypt
 inputPathLabel=Input path:
-inputTabTitle=Input
+labelEncryptKey=Encryption key:
+labelEncryptMethod=Encryption method:
+labelPreview=Preview:
+nextButton=Next
 openButtonLabel=Open...
-openButtonText=&Open...
